--- a/src/styles/_trip.core.scss
+++ b/src/styles/_trip.core.scss
@@ -149,7 +149,7 @@
  *  implement with more details later
  */
 .trip-exposed {
-  background: white
+  opacity: 1.0;
 }
 
 // include default themes
@@ -159,3 +159,4 @@
 // Include other customized themes
 @import "themes/yeti";
 @import "themes/dark";
+@import "themes/idl";
