--- a/src/styles/_trip.core.scss
+++ b/src/styles/_trip.core.scss
@@ -4,3 +4,4 @@
 @import "../themes/yeti/theme";
 @import "../themes/dark/theme";
 @import "../themes/minimalism/theme";
+@import "../themes/idl/theme";
