--- a/src/themes/default/theme.scss
+++ b/src/themes/default/theme.scss
@@ -23,6 +23,14 @@
   @include opacity(0.7);
 }
 
+.trip-unclickable {
+  pointer-events: none;
+}
+
+.trip-clickable {
+  pointer-events: initial;
+}
+
 .trip-block {
   display: none;
   padding: 8px;
